add property numberOfDots & duration

--- a/Objective-C/DYDotsViewDemo/Base.lproj/Main.storyboard
+++ b/Objective-C/DYDotsViewDemo/Base.lproj/Main.storyboard
@@ -30,6 +30,9 @@
                                     <userDefinedRuntimeAttribute type="color" keyPath="backgroundColor">
                                         <color key="value" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                     </userDefinedRuntimeAttribute>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="numberOfDots">
+                                        <integer key="value" value="4"/>
+                                    </userDefinedRuntimeAttribute>
                                 </userDefinedRuntimeAttributes>
                             </view>
                         </subviews>
